--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,7 +1,7 @@
 <section class="main-content">
   <div class="container">
     <h3 class="page-title mb-4">Welcome Back, <%= @user_profile.firstname %></h3>
-
+    <%= render 'layouts/alerts' %>
     <div class="row">
 
       <div class="col-md-6">
