--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,5 +10,5 @@
   <%= navigation_menu('Home', root_path, 'home') %>
   <%= navigation_menu('Loan Application', loans_path, 'calendar') %>
   <%= navigation_menu('Monthly Contribution', contributions_path, 'calendar') %>
-  <%= navigation_menu('Loan Repayment', root_path, 'calendar') %>
+  <%= navigation_menu('Loan Repayment', loan_path(0), 'calendar') %>
 <% end %>
