--- a/app/assets/stylesheets/tiles.scss
+++ b/app/assets/stylesheets/tiles.scss
@@ -22,7 +22,7 @@ $purple: #8956bb !default;
   }
 }
 
-a.tiles, section.tiles {
+a.tiles {
   color: white;
   background: $red;
   padding: 30px;
@@ -30,7 +30,6 @@ a.tiles, section.tiles {
   -webkit-transition: all .5s ease;
   height: 185px;
   transition: all .5s ease;
-  font-weight: 400;
 
   hr {
     border: 1px solid whitesmoke;
@@ -38,20 +37,14 @@ a.tiles, section.tiles {
     margin-bottom: 2rem;
   }
 
-  .card-body {
-    padding: 0 !important;
-  }
-
   &.big {
     height: 400px;
     padding: 60px;
-    &.chart {
-      padding: 5px 20px;
-    }
   }
 
-  &.white {
-    background: white;
+  &:hover {
+    color: white;
+    text-decoration: none;
   }
 
   &.purple {
@@ -86,17 +79,13 @@ a.tiles, section.tiles {
       font-size: 1.4em;
     }
   }
+
+
 }
 
 .tiles-link {
   margin-top: 100px;
   font-size: 1.2rem;
-  div {
-    font-size: 14px;
-    color: #eaeaea;
-    margin-top: 5px;
-    opacity: .5;
-  }
 }
 
 .tiles-icon {
