--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,16 +16,16 @@
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <%= link_to notifications_path, class: "nav-icons" do %>
+                    <a href="#" class="nav-icons">
                       <span class="fa fa-bell"></span>
                       <span class="fa fa-circle notification"></span>
-                    <% end %>
+                    </a>
                   </li>
                   <li class="list-inline-item">
-                    <%= link_to messages_path, class: "nav-icons" do %>
+                    <a href="#" class="nav-icons">
                       <span class="fa fa-envelope"></span>
                       <span class="fa fa-circle notification"></span>
-                    <% end %>
+                    </a>
                   </li>
                   <li class="dropdown list-inline-item">
                     <div class="user-toggle dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
@@ -33,16 +33,10 @@
                       <span class="caret"></span>
                     </div>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                      <%= link_to profile_path(@user_id), class: "dropdown-item" do %>
-                        <span class="fa fa-user"></span> Profile
-                      <% end %>
-                      <%= link_to profile_path(@user_id), class: "dropdown-item" do %>
-                        <span class="fa fa-cog"></span> Settings
-                      <% end %>
+                      <a class="dropdown-item" href="#"><span class="fa fa-user"></span> Profile</a>
+                      <a class="dropdown-item" href="#"><span class="fa fa-cog"></span> Settings</a>
                       <div class="dropdown-divider"></div>
-                      <%= link_to logout_path, class: "dropdown-item" do %>
-                        <span class="fa fa-signout"></span> Logout
-                      <% end %>
+                      <a class="dropdown-item" href="/logout" title="Logout"><span class="fa fa-sign-out"></span> Logout</a>
                     </div>
                   </li>
               </ul>
@@ -50,13 +44,9 @@
           </div>
         </nav>
 
-        <nav class="navbar navbar-toggleable-sm main-navigation">
-          <div class="container">
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav">
-                <%= render("layouts/navbar") %>
-              </ul>
-            </div>
-          </div>
-        </nav>
+        <% unless admin? %>
+          <%= render("layouts/navbar-user") %>
+        <% else %>
+          <%= render("layouts/navbaradmin") %>
+        <% end %>
       </section>
