--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,10 @@
-<% if admin? %>
-  <%= navigation_menu('Home', admin_index_path, 'home') %>
-  <%= navigation_menu('Manage Loans', admin_loans_path, 'circle-o') %>
-  <%= navigation_menu('Manage Contributions', admin_contributions_path, 'calendar') %>
-  <%= navigation_menu('Manage Users', admin_users_path, 'users') %>
-  <% if super_admin? %>
-    <%= navigation_menu('Manage Admins', admin_admin_users_path, 'users') %>
-  <% end %>
+<% unless admin? %>
+  <div class="menu-navbar">
+    <a href="/">Home</a>
+    <a href="#">Loan Applications</a>
+    <a href="#">Monthly Contributions</a>
+    <a href="#">Profile</a>
+  </div>
 <% else %>
-  <%= navigation_menu('Home', root_path, 'home') %>
-  <%= navigation_menu('Loan Application', loans_path, 'calendar') %>
-  <%= navigation_menu('Monthly Contribution', contributions_path, 'calendar') %>
-  <%= navigation_menu('Loan Repayment', root_path, 'calendar') %>
+  <%= render("layouts/navbaradmin") %>
 <% end %>
