--- a/app/views/notifications/notifications.html.erb
+++ b/app/views/notifications/notifications.html.erb
@@ -2,48 +2,30 @@
   <div class="container">
     <h2 class="page-title">All Notifications</h2>
     <div class="card">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th class="text-center" style="width: 10%">#</th>
-            <th class="text-center" style="width: 10%">Date</th>
-            <th  class="text-center"  style="width: 20%">Type</th>
-            <th style="width: 60%">Content</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="text-center">1</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Loan</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium explicabo corrupti cupiditate sed error quam temporibus minima ut? Laborum, mollitia!</td>
-          </tr>
-          <tr>
-            <td class="text-center">1</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Loan</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium explicabo corrupti cupiditate sed error quam temporibus minima ut? Laborum, mollitia!</td>
-          </tr>
-          <tr>
-            <td class="text-center">1</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Loan</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium explicabo corrupti cupiditate sed error quam temporibus minima ut? Laborum, mollitia!</td>
-          </tr>
-          <tr>
-            <td class="text-center">1</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Loan</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium explicabo corrupti cupiditate sed error quam temporibus minima ut? Laborum, mollitia!</td>
-          </tr>
-          <tr>
-            <td class="text-center">1</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Loan</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium explicabo corrupti cupiditate sed error quam temporibus minima ut? Laborum, mollitia!</td>
-          </tr>
-        </tbody>
-      </table>
+      <% if @notification.nil? %>
+        <div>You do not have any notification</div>
+      <% else%>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th class="text-center" style="width: 10%">#</th>
+              <th class="text-center" style="width: 10%">Date</th>
+              <th  class="text-center"  style="width: 20%">Type</th>
+              <th style="width: 60%">Content</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @notifications.each_with_index do |notification|%>
+            <tr>
+              <td class="text-center"><%= index + 1 %></td>
+              <td class="text-center"><%= @notification.createdAt %></td>
+              <td class="text-center"><%= @notification.notifiable_type %></td>
+              <td><%= @notification.notifiable_type %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% end %>
     </div>
   </div>
 
