--- a/app/views/contributions/new.html.erb
+++ b/app/views/contributions/new.html.erb
@@ -61,6 +61,9 @@
               <section class="profile-content">
                 <h5 class="primary-header">Terms and Conditions</h5>
                 <ul>
+                  <li> An entrance fee of N5000 will be deducted from your savings</li>
+                  <li> The sum N1000 will be deducted for Passbook and Bye-Law</li>
+                  <li> A fixed amount of N10000 will be deducted either once or monthly for a maximum of 4months for share capital</li>
                   <li> The monthly contribution shall be subject to Management Committee Approval</li>
                   <li> Your net pay must be able to accommodate the monthly contribution</li>
                   <li> The Society reserves the right to grant or reject any application.</li>
