--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -163,6 +163,11 @@
               <section class="profile-content">
                 <h5 class="primary-header">Terms and Conditions</h5>
                 <ul>
+                  <li> Normal loan - Maximum of N3m payable in 36 months @ 6.5% per annum</li>
+                  <li> Special loan - Maximum of N2m @ 10% per annum for a maximum of 36 months payable monthly</li>
+                  <li> All loans shall hence forth go through HR Dept for verification</li>
+                  <li> Mortgage loan (funded by bank) shall henceforth attract additional 2% and still be subject to Central Bank of Nigeria (CBN) interest rate</li>
+                  <li> Withdrawal from savings by the member will be 1/3 of his/her savings.</li>
                   <li> The loan shall be subject to Management Committee Approval</li>
                   <li> Your net pay must be able to accommodate the monthly deduction</li>
                   <li> The Society reserves the right to grant or reject any application.</li>
