--- a/app/views/admin/all_users.html.erb
+++ b/app/views/admin/all_users.html.erb
@@ -2,73 +2,40 @@
   <div class="container">
     <h2 class="page-title">All Users</h2>
     <div class="card">
+    <% if @all_users.nil? %>
+      <div class="padding10">No User registered</div>
+    <% else %>
       <table class="table table-striped">
         <thead>
           <tr>
             <th class="text-center" style="width: 10%">#</th>
-            <th class="text-center">Name</th>
-            <th class="text-center">Registered Date</th>
-            <th class="text-center">Current Loan</th>
-            <th class="text-center">Last Contributions</th>
-            <th class="text-center">Last Loan</th>
-            <th class="text-center"></th>
+            <th class="text-center">First Name</th>
+            <th class="text-center">Last Name</th>
+            <th class="text-center">Designation</th>
+            <th class="text-center">Department</th>
+            <th class="text-center">Registered date</th>
+            <th class="text-center">Status</th>
           </tr>
         </thead>
         <tbody>
+        <% @all_users.each_with_index do |profile, index| %>
           <tr>
-            <td class="text-center">1</td>
-            <td class="text-center">Gboyega Alowolodu</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Savings</td>
-            <td class="text-center">150,000</td>
-            <td class="text-center">12-07-2017</td>
+            <td class="text-center"><%= index + 1 %></td>
+            <td class="text-center"><%= profile.firstname %></td>
+            <td class="text-center"><%= profile.lastname %></td>
+            <td class="text-center"><%= profile.designation %></td>
+            <td class="text-center"><%= profile.department %></td>
+            <td class="text-center"><%= profile.created_at.to_date %></td>
             <td class="text-center">
               <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
               <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
               <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
             </td>
           </tr>
-          <tr>
-            <td class="text-center">2</td>
-            <td class="text-center">Gboyega Alowolodu</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Savings</td>
-            <td class="text-center">150,000</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">
-              <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
-              <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
-              <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
-            </td>
-          </tr>
-          <tr>
-            <td class="text-center">3</td>
-            <td class="text-center">Gboyega Alowolodu</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Savings</td>
-            <td class="text-center">150,000</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">
-              <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
-              <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
-              <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
-            </td>
-          </tr>
-          <tr>
-            <td class="text-center">1</td>
-            <td class="text-center">Gboyega Alowolodu</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">Savings</td>
-            <td class="text-center">150,000</td>
-            <td class="text-center">12-07-2017</td>
-            <td class="text-center">
-              <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
-              <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
-              <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
-            </td>
-          </tr>
+        <% end %>
         </tbody>
       </table>
+    <% end %>
     </div>
   </div>
 
