--- a/app/views/admin/all_users.html.erb
+++ b/app/views/admin/all_users.html.erb
@@ -18,14 +18,14 @@
           </tr>
         </thead>
         <tbody>
-        <% @all_users.each_with_index do |profile, index| %>
+        <% @all_users.each_with_index do |user, index| %>
           <tr>
             <td class="text-center"><%= index + 1 %></td>
-            <td class="text-center"><%= profile.firstname %></td>
-            <td class="text-center"><%= profile.lastname %></td>
-            <td class="text-center"><%= profile.designation %></td>
-            <td class="text-center"><%= profile.department %></td>
-            <td class="text-center"><%= profile.created_at.to_date %></td>
+            <td class="text-center"><%= user.profile.firstname %></td>
+            <td class="text-center"><%= user.profile.lastname %></td>
+            <td class="text-center"><%= user.profile.designation %></td>
+            <td class="text-center"><%= user.profile.department %></td>
+            <td class="text-center"><%= user.profile.created_at.to_date %></td>
             <td class="text-center">
               <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
               <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
