--- a/app/views/admin/application_details.html.erb
+++ b/app/views/admin/application_details.html.erb
@@ -1,197 +1,51 @@
 <section class="main-content">
   <div class="container">
-    <h2 class="page-title">This Month Application</h2>
+    <h2 class="page-title">Active/Inactive Users</h2>
     <div class="card">
       <div class="card-body p-lg">
       
         <form action="" id="profile-form">
           <div class="row">
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-sm-12">
-                  <h5 class="primary-header">Granted Applications </h5>
-                  <table class="table table-striped table-money">
-                    <thead>
-                      <tr>
-                        <th class="text-center" width="15%">#</th>
-                        <th width="55%">Date</th>
-                        <th class="text-center" width="30%">Amount</th>
-                      </tr>
-                    </thead>
-                  </table>
-                  <div class="table-money-holder">
-                    <table class="table table-striped table-money">
-                      <tbody>
-                        <tr>
-                          <th scope="row" class="text-center" width="15%">1</th>
-                          <td width="55%">12-07-2017</td>
-                          <td class="text-center" width="30%">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">2</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">3</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">4</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">5</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">7</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">8</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">9</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">10</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                  <table class="table table-striped table-money">
-                    <thead>
-                      <tr>
-                        <th width="70%" colspan="2">Total</th>
-                        <th class="text-center" width="30%">150,000</th>
-                      </tr>
-                    </thead>
-                  </table>
-                </div>
-              </div>
+            <div class="col-sm-12">
+              <h5 class="primary-header"> Applications </h5>
+              <% if @all_users.nil? %>
+                <div class="padding10">No User registered</div>
+              <% else %>
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th class="text-center" style="width: 10%">#</th>
+                      <th class="text-center">Staff Id</th>
+                      <th class="text-center">Email</th>
+                      <th class="text-center">Date Created</th>
+                      <th class="text-center"></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  <% @inactive_users.each_with_index do |user, index| %>
+                    <tr>
+                      <td class="text-center"><%= index + 1 %></td>
+                      <td class="text-center"><%= user.username%></td>
+                      <td class="text-center"><%= user.email %></td>
+                      <td class="text-center"><%= user.created_at.to_date %></td>
+                      <td class="text-center">
+                      <% if user.activated? %>
+                        <%= link_to activate_deactivate_user_path(user.id), class: "btn btn-danger" do %>
+                          Deactivate
+                        <% end %>
+                      <% else %>
+                        <%= link_to activate_deactivate_user_path(user.id), class: "btn btn-success" do %>
+                          Activate
+                        <% end %>
+                      <% end %>
+                      </td>
+                    </tr>
+                  <% end %>
+                  </tbody>
+                </table>
+              <% end %>
             </div>
-
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-sm-12">
-                  <h5 class="primary-header">Pending Applications </h5>
-                  <table class="table table-striped table-money">
-                    <thead>
-                      <tr>
-                        <th class="text-center" width="15%">#</th>
-                        <th width="55%">Date</th>
-                        <th class="text-center" width="30%">Amount</th>
-                      </tr>
-                    </thead>
-                  </table>
-                  <div class="table-money-holder">
-                    <table class="table table-striped table-money">
-                      <tbody>
-                        <tr>
-                          <th scope="row" class="text-center" width="15%">1</th>
-                          <td width="55%">12-07-2017</td>
-                          <td class="text-center" width="30%">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">2</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">3</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">4</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">5</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">7</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">8</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">9</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">10</th>
-                          <td>12-07-2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                  <table class="table table-striped table-money">
-                    <thead>
-                      <tr>
-                        <th width="70%" colspan="2">Total</th>
-                        <th class="text-center" width="30%">150,000</th>
-                      </tr>
-                    </thead>
-                  </table>
-                </div>
-              </div>
-            </div>
-
           </div>
-        </form>
-      </div>
-    </div>
   </div>
 
 </section>
