--- a/app/views/admin/total_loans.html.erb
+++ b/app/views/admin/total_loans.html.erb
@@ -2,123 +2,78 @@
   <div class="container">
     <h2 class="page-title">Total Loans</h2>
     <div class="card">
-      <div class="card-body p-lg">
-      
-        <form action="" id="profile-form">
-          <div class="row">
-            <div class="col-md-6">
-                      
-              <section class="profile-content">
-                <h5 class="primary-header">Summary </h5>
-                <table class="table money-content">
+      <div class="padding10">
+        <% if @all_loan_app.nil? %>
+          <div class="padding10"> No loan Application available </div>
+        <% else %>
+          <form action="" id="profile-form">
+            <div class="row">
+            <div class="col-sm-12">
+              <h5 class="primary-header">All Loans </h5>
+              <table class="table table-striped table-money">
+                <thead>
+                  <tr>
+                    <th class="text-center" width="4%">#</th>
+                    <th width="6%">View Details</th>
+                    <th width="12%">Date</th>
+                    <th width="12%">Loan Amount</th>
+                    <th width="12%">Status</th>
+                    <th width="12%">Completed?</th>
+                    <th width="15%">Guarantor 1</th>
+                    <th width="15%">Guarantor 2</th>
+                    <th class="text-center" width="15%">Approve/Decline</th>
+                  </tr>
+                </thead>
+              </table>
+              <div class="table-money-holder">
+                <table class="table table-striped table-money">
                   <tbody>
-                    <tr>
-                      <td>Total Loans</td>
-                      <td class="text-right"><strong>&#8358; 150,000</strong></td>
-                    </tr>
-                    <tr>
-                      <td>This Month's Loan</td>
-                      <td class="text-right">&#8358; 15,000</td>
-                    </tr>
+                  <% @all_loan_app.each_with_index do |each_loan, index| %>
+                      <tr>
+                        <td class="text-center" width="4%"><%= index + 1 %></td>
+                        <td width="6%">
+                          <%= link_to view_loan_details_path(each_loan.id) do %>Details<% end %>
+                        </td>
+                        <td width="12%"><%= each_loan.created_at.to_date %></td>
+                        <td width="12%"><%= each_loan.amount %></td>
+                        <td width="12%"><%= each_loan.status %></td>
+                        <td width="12%"><%= each_loan.finished_payment %></td>
+                        <td width="15%"><%= getUserFullName(each_loan.guarantor_one_id) %></td>
+                        <td width="15%"><%= getUserFullName(each_loan.guarantor_two_id) %></td>
+                        <td class="text-center" width="15%">
+                          <% if loan_approved?(each_loan.status, each_loan.guarantor_one_status, each_loan.guarantor_two_status)%>
+                            <%= link_to approve_loan_path(each_loan.id), class: "btn btn-success" do %>
+                              <i class="fa fa-plus"></i>
+                            <% end %>
+                            <%= link_to decline_loan_path(each_loan.id), class: "btn btn-danger" do %>
+                              <i class="fa fa-trash"></i>
+                            <% end %>
+                          <% end %>
+                        </td>
+                      </tr>
+                  <% end %>
                   </tbody>
                 </table>
-
-              </section>
-            </div>
-
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-sm-12">
-                  <h5 class="primary-header">All Loans </h5>
-                  <table class="table table-striped table-money">
-                    <thead>
-                      <tr>
-                        <th class="text-center" width="15%">#</th>
-                        <th width="55%">Date</th>
-                        <th class="text-center" width="30%">Amount</th>
-                      </tr>
-                    </thead>
-                  </table>
-                  <div class="table-money-holder">
-                    <table class="table table-striped table-money">
-                      <tbody>
-                        <tr>
-                          <th scope="row" class="text-center" width="15%">1</th>
-                          <td width="55%">October 2017</td>
-                          <td class="text-center" width="30%">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">2</th>
-                          <td>September 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">3</th>
-                          <td>August 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">4</th>
-                          <td>July 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">5</th>
-                          <td>June 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>May 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">7</th>
-                          <td>April 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">8</th>
-                          <td>March 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>February 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>January 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">9</th>
-                          <td>December 2016</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">10</th>
-                          <td>November 2016</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                  <table class="table table-striped table-money">
-                    <thead>
-                      <tr>
-                        <th width="70%" colspan="2">Total</th>
-                        <th class="text-center" width="30%">150,000</th>
-                      </tr>
-                    </thead>
-                  </table>
-                </div>
               </div>
+              <table class="table table-striped table-money">
+                <thead>
+                  <tr>
+                    <th width="80%">Total Pending Approval</th>
+                    <th class="text-center" width="20%"><%= @total_pending_loan %></th>
+                  </tr>
+                  <tr>
+                    <th width="80%">Total Approved</th>
+                    <th class="text-center" width="20%"><%= @total_approved_loan %></th>
+                  </tr>
+                  <tr>
+                    <th width="80%">Total Declined</th>
+                    <th class="text-center" width="20%"><%= @total_declined_loan %></th>
+                  </tr>
+                </thead>
+              </table>
             </div>
-
-          </div>
-        </form>
+          </form>
+        <% end %>
       </div>
     </div>
   </div>
