--- a/app/views/loans/show.html.erb
+++ b/app/views/loans/show.html.erb
@@ -6,8 +6,8 @@
         <section class="card card-money">
           <div class="card-body">
             <div class="card-gray">
-              <h2>&#8358; 150, 0000</h2>
-              <p>Status: Approved </p>
+              <h2>&#8358; <%= @loan_detail.amount %></h2>
+              <p>Status: <%= @loan_detail.status %> </p>
             </div>
                             
             <table class="table money-content">
@@ -17,53 +17,57 @@
                 </tr>
                 <tr>
                   <td>Loan Type</td>
-                  <td class="text-right"><strong>Savings</strong></td>
+                  <td class="text-right"><strong><%= loan_type(@loan_detail.loan_type_id) %></strong></td>
                 </tr>
                 <tr>
                   <td>Expected amount</td>
-                  <td class="text-right"><strong>&#8358; 165,000</strong></td>
+                  <td class="text-right"><strong>&#8358; <%= @loan_detail.expected_amount %></strong></td>
                 </tr>
                 <tr>
                   <td>Amount Paid</td>
-                  <td class="text-right"><strong>&#8358; 100,000</strong></td>
+                  <td class="text-right"><strong>&#8358; <%= amount_paid(@loan_detail.id) %></strong></td>
                 </tr>
                 <tr>
                   <td>Remaining Payment</td>
-                  <td class="text-right">&#8358; 65,000</td>
+                  <td class="text-right">&#8358; <%= @loan_detail.expected_amount - amount_paid(@loan_detail.id) %></td>
                 </tr>
                 <tr>
                   <td>Finished Payment</td>
-                  <td class="text-right">No</td>
+                  <td class="text-right"><%= @loan_detail.finished_payment %></td>
                 </tr>
                 <tr>
-                  <td>Remaining Payment</td>
-                  <td class="text-right">&#8358; 65,000</td>
+                  <td>Finished Payment Date</td>
+                  <td class="text-right"><%= @loan_detail.finished_payment_date.to_date if @loan_detail.finished_payment_date %></td>
                 </tr>
                 <tr>
                   <td class="transparent-header" colspan="2"><h5>Deduction Summary</h5></td>
                 </tr>
                 <tr>
                   <td>Monthly Deduction</td>
-                  <td class="text-right">&#8358; 25, 000</td>
+                  <td class="text-right">&#8358; <%= @loan_detail.monthly_deduction %></td>
                 </tr>
                 <tr>
                   <td>Yearly Deduction</td>
-                  <td class="text-right">None</td>
+                  <td class="text-right"><%= @loan_detail.yearly_deduction %></td>
                 </tr>
                 <tr>
                   <td class="transparent-header" colspan="2"><h5>Guarantors</h5></td>
                 </tr>
                 <tr>
                   <td>Guarantor 1</td>
-                  <td class="text-right">Christian Ronaldo <span class="fa fa-check text-success"></span></td>
+                  <td class="text-right"><%= guarantor_fullname(@loan_detail.guarantor_one_id) %> <span class="fa fa-check text-success"></span></td>
                 </tr>
                 <tr>
                   <td>Guarantor 2</td>
-                  <td class="text-right">J J Okocha  <span class="fa fa-close text-danger"></span></td>
+                  <td class="text-right"><%= guarantor_fullname(@loan_detail.guarantor_two_id) %><span class="fa fa-close text-danger"></span></td>
                 </tr>
               </tbody>
             </table>
-            <a href="#" class="btn btn-danger">Edit Loan</a>
+            <%= link_to edit_loan_path(@loan_detail.id), class: "btn btn-danger" do %>Edit Loan<% end%>
+            <% if @loan_detail.status == 'approved' %>
+              <%= link_to clear_loan_deposit_path(@loan_detail.id) , class: "btn btn-info" do %>Clear Balance By Deposit<% end%>
+              <%= link_to clear_loan_savings_path(@loan_detail.id), class: "btn btn-success" do %>Clear Balance By Savings<% end%>
+            <% end %>
           </div>
         </section>
       </div>
