fixed all view manage users link

--- a/app/views/admin/all_users.html.erb
+++ b/app/views/admin/all_users.html.erb
@@ -27,9 +27,15 @@
             <td class="text-center"><%= user.profile.department %></td>
             <td class="text-center"><%= user.profile.created_at.to_date %></td>
             <td class="text-center">
-              <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
-              <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
-              <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
+              <%= link_to profile_path(user.id) do %>
+                <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
+              <% end %>
+              <%= link_to edit_profile_path(user.id) do %>
+                <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
+              <% end %>
+              <%= link_to activate_deactivate_user_path(user.id) do %>
+                <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
+              <% end %>
             </td>
           </tr>
         <% end %>
