--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -14,7 +14,7 @@
 
               <section class="profile-content">
                 <h5 class="primary-header">Personal Information</h5>
-                <%= form.hidden_field :user_id, value: @user_id %>
+                <%= form.hidden_field :user_id, value: @thrift_id %>
 
                 <%# First Name %>
                 <div class="form-group row">
