--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
                   </li>
                   <li class="dropdown list-inline-item">
                     <div class="user-toggle dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
-                      <img src="http://res.cloudinary.com/dzwafstu3/image/upload/v1505747865/nnpc/loan-user.png" height="30" alt="" class="rounded-circle">
+                      <img src="<%= @profile_image %>" height="30" alt="" class="rounded-circle">
                       <span class="caret"></span>
                     </div>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
