add loan and loan repayment

--- a/app/views/admin/total_contributions.html.erb
+++ b/app/views/admin/total_contributions.html.erb
@@ -6,7 +6,7 @@
         <span class="fa fa-plus"></span>
       </button>
     <% end %>
-    <button data-toggle= "modal" data-target= "#uploadContributionModal" data-placement="top" title="Upload Multiple Users" class="btn  btn-outline-info btn-round">
+    <button data-toggle= "modal" data-target= "#uploadContributionModal" data-placement="top" title="Upload Users Contributions" class="btn  btn-outline-info btn-round">
       <span class="fa fa-upload"></span>
     </button>
     <%= link_to admin_download_contributions_csv_path(format: 'csv') do%>
