--- a/app/views/admin/total_loans.html.erb
+++ b/app/views/admin/total_loans.html.erb
@@ -1,6 +1,20 @@
 <section class="main-content">
   <div class="container">
-    <h2 class="page-title">Total Loans</h2>
+    <h2 class="page-title">Total Loans
+      <%= link_to admin_new_loan_path() do%>
+        <button data-toggle="tooltip" data-placement="top" title="Add New Loan"  class="btn  btn-outline-success btn-round">
+          <span class="fa fa-plus"></span>
+        </button>
+      <% end %>
+      <button data-toggle= "modal" data-target= "#uploadLoanModal" data-placement="top" title="Upload Loan Applications" class="btn  btn-outline-info btn-round">
+        <span class="fa fa-upload"></span>
+      </button>
+      <%= link_to admin_download_loans_csv_path(format: 'csv') do%>
+        <button data-toggle="tooltip" data-placement="top" title="Download Loans (CSV)"  class="btn  btn-outline-danger btn-round">
+          <span class="fa fa-download"></span>
+        </button>
+      <% end %>
+    </h2>
     <div class="card">
       <div class="padding10">
         <% if @all_loan_app.nil? %>
