adds total contribution to user profile

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -20,6 +20,10 @@
           <%= link_to edit_profile_path(@thrift_id), class: "btn btn-danger" do %>
             <span class="fa fa-user"></span> Edit Profile
           <% end %>
+          <h5 class="primary-header mt-3 mb-3">
+            <%= @total_contribution %> <br>
+            <small class="text-muted">Total Contribution</small>
+          </h5>
          </div>
          <div class="col-sm-8">
           <div class="row">
